samples/_failures_safe/1761352708_efd7bd_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f2f339dc.c: In function ‘main’:
./samples/SAFE/__tmp_f2f339dc.c:147:9: error: expected declaration or statement at end of input
  147 |         printf("No text provided.\n");
      |         ^~~~~~
./samples/SAFE/__tmp_f2f339dc.c:147:9: error: expected declaration or statement at end of input
